Update image sources to use raw GitHub links

--- a/index.html
+++ b/index.html
@@ -195,22 +195,22 @@
   <!-- FOTOS DAS INTEGRANTES -->
   <div class="fotos">
     <div class="foto">
-      <img src="img-lanna.jpg" alt="Lanna Lorrane">
+      <img src="https://github.com/LannaLorrane/FeiraDeCiencias/blob/main/img-lanna.jpg?raw=true" alt="Lanna Lorrane">
       <p>Lanna Lorrane</p>
     </div>
 
     <div class="foto">
-      <img src="img-lilian.jpg" alt="Lilian Alessandra">
+      <img src="https://github.com/LannaLorrane/FeiraDeCiencias/blob/main/img-lilian.jpg?raw=true" alt="Lilian Alessandra">
       <p>Lilian Alessandra</p>
     </div>
 
     <div class="foto">
-      <img src="img-lara.jpeg" alt="Lara Fábian">
+      <img src="https://github.com/LannaLorrane/FeiraDeCiencias/blob/main/img-lara.jpeg?raw=true" alt="Lara Fábian">
       <p>Lara Fábian</p>
     </div>
 
     <div class="foto">
-      <img src="img-anyy.jpg" alt="Anny Sophia">
+      <img src="https://github.com/LannaLorrane/FeiraDeCiencias/blob/main/img-anyy.jpg?raw=true" alt="Anny Sophia">
       <p>Anny Sophia</p>
     </div>
   </div>
