--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
       gap: 24px;
       margin: 50px 0 20px;
       text-align: center;
+      padding: 0 12px;
     }
 
     .foto {
@@ -82,7 +83,7 @@
 
     .foto img {
       width: 100%;
-      height: 240px;
+      height: 200px;
       object-fit: cover;
       border-radius: 12px;
       box-shadow: 0 4px 14px rgba(0,0,0,0.2);
