--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
       display: flex;
       flex-wrap: wrap;
       justify-content: center;
-      gap: 10px;
+      gap: 12px;
       margin: 50px 0 20px;
       text-align: center;
       padding: 0 12px;
@@ -78,8 +78,8 @@
     }
 
     .foto {
-      flex: 1 1 220px;
-      max-width: 240px;
+     flex: 1 1 calc(50% - 12px);
+     max-width: none;
     }
 
     .foto img {
