--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 <body>
   <header>
     <h1>COVID-19 VACINAÇÃO</h1>
-    <p>Descubra como a ciência ocorreu contra o tempo para salvar milhões de vidas</p>
+    <p>Descubra como a ciência correu contra o tempo para salvar milhões de vidas</p>
   </header>
 
   <div class="imagem-covid-wrap">
